service.yaml
apiVersion: v1
kind: Service
metadata:
  name: Backend_App-service
spec:
  type: ClusterIP
  selector:
    app: Backend_App
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
